# lwm

./: .gitignore  Makefile  README  README.md  config.mk  meson.build
src/: check.c  check.h  command.c  command.h  logger.c  logger.h  loop.c  loop.h  main.c  meson.build  window.c  window.h
